--- a/examples/introduction/layout.mustache
+++ b/examples/introduction/layout.mustache
@@ -3,6 +3,9 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8">
   <title>acts_as_api</title>
+  <meta content="A Ruby/Rails gem to easily generate web api reponses!" name="description" />
+  <meta content="Christian Bäuerlein" name="author" />
+  <meta content="en" name="language" />    
   <link rel="stylesheet" href="./docco.css">
   <link  href="http://fonts.googleapis.com/css?family=Copse:regular" rel="stylesheet" type="text/css" >
   <style>
