updates gem to 0.4.4

--- a/examples/introduction/layout.mustache
+++ b/examples/introduction/layout.mustache
@@ -5,7 +5,7 @@
   <title>acts_as_api</title>
   <meta content="A Ruby/Rails gem to easily generate web api reponses!" name="description" />
   <meta content="Christian Bäuerlein" name="author" />
-  <meta content="en" name="language" />    
+  <meta content="en" name="language" />
   <link rel="stylesheet" href="./docco.css">
   <link  href="http://fonts.googleapis.com/css?family=Copse:regular" rel="stylesheet" type="text/css" >
   <style>
@@ -20,7 +20,7 @@
     word-spacing: 0em;
     line-height: 1.2;
   }
-  </style>  
+  </style>
 </head>
 <body>
 <div id='container'>
@@ -42,7 +42,7 @@
     <tr>
       <th class=docs>
         <h1>acts_as_api</h1>
-        <p>Makes creating XML/JSON responses in Rails 3 easy and fun.</p>
+        <p>Makes creating XML/JSON responses in Rails 3, 4 and 5 easy and fun.</p>
       </th>
       <th class=code></th>
     </tr>
